weechat/weechat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weechat
  labels:
    app: weechat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weechat
  template:
    metadata:
      labels:
        app: weechat
    spec:
      containers:
        - name: weechat
          image: johnnye00/weechat
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
              protocol: TCP
          volumeMounts:
            - name: weechat-data
              mountPath: /home/user
            - name: weechat-config
              mountPath: /home/user/.weechat/relay.conf
              subPath: relay.conf
      volumes:
        - name: weechat-data
          persistentVolumeClaim:
            claimName: weechat
        - name: weechat-config
          secret:
            secretName: weechat-config
            items:
              - key: relay.conf
                path: relay.conf
      
---
apiVersion: v1
kind: Service
metadata:
  name: weechat
spec:
  type: ClusterIP
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: weechat
