weechat/weechat-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-weechat

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`weechat.bkknr2.lan`)
      kind: Rule
      services:
        - name: weechat
          port: 8001
      middlewares:
        - name: https-redirect

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-weechat

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`weechat.bkknr2.lan`)
      kind: Rule
      services:
        - name: weechat
          port: 8001
  tls:
    secretName: bkknr2-wildcard-tls
